# aed_project

./: CMakeLists.txt  Doxyfile  Makefile  README.md  TODO.md  main  main.cpp  requests_log.csv
data/: datatest  datatest.cpp  students_classes.csv
docs/html/: App_8cpp_source.html  App_8hpp_source.html  Lecture_8cpp_source.html  Lecture_8hpp_source.html  Request_8cpp_source.html  Request_8hpp_source.html  Script_8cpp_source.html  Script_8hpp_source.html  Uc_8cpp_source.html  (+28 more)
headers/: Class.h  Student.h  Uc.h
inc/: App.hpp  Class.h  Class.hpp  Lecture.hpp  Request.hpp  Schedule.h  Schedule.hpp  Script.hpp  Student.h  Student.hpp  Uc.h  Uc.hpp
src/: App.cpp  Class.cpp  Lecture.cpp  Request.cpp  Schedule.cpp  Script.cpp  Student.cpp  Uc.cpp  main  main.cpp
test/: AddUcRequestTest  AddUcRequestTest.cpp  AppTest  AppTest.cpp  AppTests  AppTests.cpp  GetScheduleTests  GetScheduleTests.cpp  LectureTests  LectureTests.cpp  LoadClassesTest  LoadClassesTest.cpp  LoadLectureTest  LoadLectureTest.cpp  RequestAddUcTest  RequestAddUcTest.cpp  RequestAdminRequestsTest  RequestAdminRequestsTest.cpp  RequestRemoveUcTests  RequestRemoveUcTests.cpp  RequestStudentRequests  RequestStudentRequests.cpp  RequestSwitchClassTest  RequestSwitchClassTest.cpp  RequestSwitchUcTest  RequestSwitchUcTest.cpp  RequestUndoTest  RequestUndoTest.cpp  StudentLoadTests  StudentLoadTests.cpp  StudentTests  StudentTests.cpp  StudentsInClassTests  StudentsInClassTests.cpp  StudentsInLectureTests.cpp  StudentsInNUcsTest  StudentsInNUcsTest.cpp  StudentsInUcTest  StudentsInUcTest.cpp  StudentsInYearTest  (+5 more)
(+68 files in other folders)
